--- a/note/P12-P17.md
+++ b/note/P12-P17.md
@@ -52,7 +52,7 @@ Modularization（复用，高效率）
 
 ## P17 CNN(Convolutional Neural Network，卷积神经网络)
 
-> 适合用于图像处理，原理是去除无用特征（即降低复杂度，降噪，去除杂质，让程序专注于感兴趣的部位）
+> 适合用于图像处理，原理是去除无用特征（即降低复杂度，降噪，去除杂质，让程序专注于感兴趣的部位），同时对数据进行抽象，让程序拥有大局观
 
 架构
 ![图 8](images/P12-P17_2020-07-31_02-11-39.jpg)  
@@ -74,3 +74,22 @@ Max Pooling
 3. 其他(都是类图像的模式)：围棋、语音识别、文字处理
 
 ## P18-P19 GNN(Graph Neural Network)
+
+P18：迷迷糊糊  
+*P19：暂时跳过
+
+## P20 RNN(Recurrent Neural Network，卷积神经网络)
+
+> 让程序拥有记忆能力
+LSTM(Long short term memory)是其中一种比较常用的实现
+
+P22 Word Embedding
+
+通过某种编码手段，让程序能识别句子中的词与词之间的关系，也就是让程序自动将每个单词进行归类，最终目的是让程序理解文章或人类语言
+
+主流的两种做法：
+
+1. 计算两个词同时在某个地方出现的次数
+2. 计算某个词前后左右会接另外一个词的概率
+
+> 为什么能生效，原因可能是如果a和b后面接c的概率相似，那么a和b属于同一类词的可能性也会比较大
